--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="color_break_in">#008859</color>
     <color name="color_break_out">#F26333</color>
 
-    <color name="image_tint">#5C616F</color>
+    <color name="image_tint">#595C616F</color>
 
 </resources>
