--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CheckOutActivity"
+    tools:context=".ui.check_out.CheckOutJiginActivity"
     android:background="#F6F7F8">
 
     <View
@@ -81,6 +81,21 @@
                         android:text="Break In"
                         android:textColor="@color/color_break_in"
                         android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/checkIn"
+                    android:layout_width="120dp"
+                    android:layout_height="80dp"
+                    android:orientation="horizontal">
+
+                    <pl.droidsonroids.gif.GifImageView
+                        android:src="@color/image_tint"
+                        android:id="@+id/check_in_gif"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -167,55 +182,13 @@
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:id="@+id/breakInLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="16dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:layout_marginTop="12dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/img_break_in"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            app:srcCompat="@drawable/ic_break_in" />
-
-                        <TextView
-                            android:id="@+id/breakInTxt"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginEnd="4dp"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/bold700"
-                            android:text="Break In"
-                            android:textColor="@color/color_break_in"
-                            android:textSize="17sp" />
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:padding="4dp"
-                            app:srcCompat="@drawable/ic_right" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="#D0D7DD" />
-
-                    <LinearLayout
                         android:id="@+id/breakOutLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:padding="16dp"
+                        android:layout_marginTop="12dp"
                         android:layout_marginStart="12dp"
                         android:layout_marginEnd="12dp"
                         android:layout_marginBottom="12dp">
@@ -246,6 +219,49 @@
 
                     </LinearLayout>
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="#D0D7DD" />
+
+                    <LinearLayout
+                        android:id="@+id/breakInLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginEnd="12dp"
+                        android:layout_marginBottom="12dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/img_break_in"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            app:srcCompat="@drawable/ic_break_in" />
+
+                        <TextView
+                            android:id="@+id/breakInTxt"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/bold700"
+                            android:text="Break In"
+                            android:textColor="@color/color_break_in"
+                            android:textSize="17sp" />
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:padding="4dp"
+                            app:srcCompat="@drawable/ic_right" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -259,6 +275,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/timesheetLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="22dp"
