--- a/app/src/main/res/layout/activity_timelog.xml
+++ b/app/src/main/res/layout/activity_timelog.xml
@@ -69,7 +69,6 @@
                 android:paddingTop="8dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
-                android:text="TextView"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -102,7 +101,6 @@
                 android:paddingTop="8dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
-                android:text="TextView"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -110,7 +108,7 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
+        android:id="@+id/search"
         style="@style/Button_Primary"
         android:layout_width="202dp"
         android:layout_height="44dp"
@@ -129,15 +127,16 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reportsRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
-        android:paddingTop="16dp"
-        android:clipToPadding="true"
         android:background="@drawable/check_in_layout_bg"
+        android:clipToPadding="true"
+        android:paddingTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
