--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -277,12 +277,12 @@
 
             <View
                 android:id="@+id/view"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
-                android:background="#D0D7DD" />
+                android:layout_marginBottom="8dp"
+                android:background="#D0D7DD"
+                android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:visibility="gone"
