--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -152,7 +152,8 @@
                     android:orientation="horizontal">
                     <TextView
                         android:id="@+id/welcomText"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/medium500"
                         android:text="Welcome, 🖐"
@@ -162,9 +163,9 @@
 
                     <ImageView
                         android:id="@+id/lock"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="end"
                         android:layout_height="25dp"
-                        android:layout_gravity="right|end"
                         android:src="@android:drawable/ic_lock_lock"/>
                 </LinearLayout>
 
