--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="wlcolor">#C1D9E7</color>
     <color name="color_break_in">#008859</color>
     <color name="color_break_out">#F26333</color>
+    <color name="line_black">#83A6A6A6</color>
 
     <color name="image_tint">#595C616F</color>
 
