--- a/app/src/main/res/layout/activity_check_in.xml
+++ b/app/src/main/res/layout/activity_check_in.xml
@@ -135,7 +135,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/time"
+                    android:id="@+id/time_sheet"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_margin="8dp"
