--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="blue">#01A0C6</color>
-    <color name="text_light_shade">#5C616F</color>
+    <color name="text_light_shade">#A5ACB8</color>
     <color name="seperator">#D0D7DD</color>
     <color name="wlcolor">#C1D9E7</color>
     <color name="color_break_in">#008859</color>
