--- a/app/src/main/res/layout/layout_feeds.xml
+++ b/app/src/main/res/layout/layout_feeds.xml
@@ -92,6 +92,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/postImage"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_marginTop="22dp"
