--- a/app/src/main/res/layout/notification_holder.xml
+++ b/app/src/main/res/layout/notification_holder.xml
@@ -11,13 +11,13 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_insurance_1"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp" />
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_insurance_1" />
 
         <TextView
             android:id="@+id/notification"
@@ -26,7 +26,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:layout_toEndOf="@+id/image"
             android:fontFamily="@font/medium500"
@@ -42,13 +42,13 @@
             android:layout_below="@+id/notification"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:layout_toEndOf="@+id/image"
             android:fontFamily="@font/medium500"
             android:text="Yesterday at 11:42 PM"
             android:textColor="@color/text_light_shade"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <View
@@ -56,7 +56,7 @@
             android:layout_height="1dp"
             android:layout_below="@+id/time"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:background="@color/line_black" />
 
 
