--- a/app/src/main/res/layout/layout_feeds.xml
+++ b/app/src/main/res/layout/layout_feeds.xml
@@ -9,11 +9,14 @@
         android:id="@+id/cardView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/white"
         app:cardCornerRadius="18dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -57,9 +60,9 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/dummy" />
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_insurance_1" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -67,16 +70,19 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         android:fontFamily="@font/bold700"
+                        android:maxLines="2"
                         android:text="Dahua technologies"
                         android:textColor="@color/black"
-                        android:textSize="18sp" />
+                        android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/crated_at"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
@@ -95,7 +101,7 @@
                 android:id="@+id/postImage"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/dummy_large" />
@@ -103,7 +109,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="16dp"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -112,6 +121,7 @@
                     android:src="@drawable/heart" />
 
                 <TextView
+                    android:id="@+id/likeCount"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="12dp"
@@ -131,6 +141,7 @@
                     android:textSize="24sp" />
 
                 <TextView
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="12dp"
@@ -151,13 +162,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/like"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -171,7 +184,7 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
                         android:fontFamily="@font/bold700"
                         android:text="Like" />
@@ -183,6 +196,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -192,7 +206,7 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
                         android:fontFamily="@font/bold700"
                         android:text="Comment" />
@@ -216,9 +230,9 @@
 
     <View
         android:id="@+id/gap"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
