--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,15 @@
     <color name="line_black">#83A6A6A6</color>
 
     <color name="image_tint">#595C616F</color>
+    <color name="bottom_sheet_bg">#E8EBF5</color>
+
+    <color name="text_color_primary">#1761C5</color>
+    <color name="text_color_light">#B7F6F7F8</color>
+    <color name="text_color_light2">#5C616F</color>
+    <color name="text_color_light3">#995C616F</color>
+    <color name="text_color_green">#008859</color>
+
+
+
 
 </resources>
