--- a/app/src/main/res/drawable/container_bg.xml
+++ b/app/src/main/res/drawable/container_bg.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/white"/>
+        android:color="@color/container"/>
 
     <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
 
