--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.check_out.CheckOutJiginActivity"
+    tools:context=".ui.check_out.CheckOutActivity"
     android:background="#F6F7F8">
 
     <View
