--- a/app/src/main/res/layout/new_request_layout.xml
+++ b/app/src/main/res/layout/new_request_layout.xml
@@ -9,15 +9,14 @@
         android:id="@+id/request_leave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:padding="24dp"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/image1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_calendar"/>
 
         <LinearLayout
@@ -32,8 +31,7 @@
                 android:fontFamily="@font/medium500"
                 android:text="Request for Leave"
                 android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -41,8 +39,8 @@
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/medium500"
                 android:text="Sick Leave, Annual Leave, etc"
-                android:textColor="@color/text_light_shade"
-                android:textSize="16sp" />
+                android:textColor="@color/text_color_light2"
+                android:textSize="14sp" />
 
 
 
@@ -69,13 +67,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_document"/>
 
         <LinearLayout
@@ -90,8 +88,7 @@
                 android:fontFamily="@font/medium500"
                 android:text="Request for Documents"
                 android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -99,8 +96,8 @@
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/medium500"
                 android:text="Salary Certificate, NOC, etc"
-                android:textColor="@color/text_light_shade"
-                android:textSize="16sp" />
+                android:textColor="@color/text_color_light2"
+                android:textSize="14sp" />
 
 
 
