--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,7 +54,7 @@
 
     <style name="tittle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/bold700</item>
+        <item name="android:fontFamily">@font/medium500</item>
     </style>
 
     <style name="BottomNavigationView.Inactive" parent="@style/TextAppearance.AppCompat.Caption">
@@ -65,6 +65,12 @@
     <style name="BottomNavigationView.Active" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textSize">12sp</item>
         <item name="fontFamily">@font/normal400</item>
+    </style>
+
+    <style name="MyHintStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/black</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="android:colorControlNormal">@color/white</item>
     </style>
 
 </resources>
