--- a/app/src/main/res/layout/activity_check_in_.xml
+++ b/app/src/main/res/layout/activity_check_in_.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_back"
@@ -125,6 +126,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/timeSheet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="22dp"
