--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -80,6 +80,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="8dp"
+                    android:inputType="textPersonName"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
@@ -125,6 +126,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="8dp"
+                    android:inputType="textEmailAddress"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
@@ -170,6 +172,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="8dp"
+                    android:inputType="number"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
@@ -215,8 +218,10 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="8dp"
+                    android:focusable="false"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:keyboardNavigationCluster="false"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
