--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -67,6 +67,7 @@
                     android:src="@drawable/ic_lock" />
 
                 <EditText
+                    android:id="@+id/oldPass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -76,6 +77,7 @@
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
                     android:hint="Enter Old Password"
+                    android:inputType="textPassword"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
@@ -107,15 +109,17 @@
                     android:src="@drawable/ic_lock" />
 
                 <EditText
+                    android:id="@+id/newPass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="16dp"
                     android:layout_toEndOf="@+id/lock1"
-                    android:hint="Enter Old Password"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:hint="Enter New Password"
+                    android:inputType="textPassword"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
@@ -147,15 +151,17 @@
                     android:src="@drawable/ic_lock" />
 
                 <EditText
+                    android:id="@+id/rePass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="16dp"
                     android:layout_toEndOf="@+id/lock3"
-                    android:hint="Enter Old Password"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:hint="Re-Enter New Password"
+                    android:inputType="textPassword"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
@@ -167,7 +173,7 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/save"
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
