--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -136,6 +136,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/userImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/dlt_single_logo" />
