--- a/app/src/main/res/layout/fragment_insurance.xml
+++ b/app/src/main/res/layout/fragment_insurance.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.services.ServicesFragment">
+    tools:context=".ui.services.InsuranceFragment">
 
     <TextView
         android:layout_width="match_parent"
