--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -66,7 +66,7 @@
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/bold700"
             android:gravity="center"
-            android:text="James Morgan Mc Grill"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -84,7 +84,7 @@
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/medium500"
             android:gravity="center"
-            android:text="Principal Attorney"
+            android:text=""
             android:textColor="@color/text_color_light"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
