--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -73,4 +73,8 @@
         <item name="android:colorControlNormal">@color/white</item>
     </style>
 
+    <style name="Color1SwitchStyle">
+        <item name="colorControlActivated">@color/text_color_primary</item>
+    </style>
+
 </resources>
