--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -497,6 +497,7 @@
                     android:fontFamily="@font/bold700"
                     android:padding="16dp"
                     android:text="More"
+                    android:background="@color/white"
                     android:textColor="@color/text_color_black"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -505,6 +506,7 @@
                     android:id="@+id/attendanceLog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp"
@@ -546,6 +548,7 @@
                     android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp"
@@ -586,6 +589,7 @@
                     android:id="@+id/settings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp"
@@ -626,6 +630,7 @@
                     android:id="@+id/logOut"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp"
