--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="container">#F6F7F8</color>
 
     <color name="transparent">#00FFFFFF</color>
@@ -20,7 +20,7 @@
     <color name="line_black">#83A6A6A6</color>
 
     <color name="image_tint">#595C616F</color>
-    <color name="bottom_sheet_bg">#E8EBF5</color>
+    <color name="bottom_sheet_bg">#F0E8EBF5</color>
 
     <color name="text_color_primary">#1761C5</color>
     <color name="text_color_light">#B7F6F7F8</color>
