--- a/app/src/main/res/layout/leave_request.xml
+++ b/app/src/main/res/layout/leave_request.xml
@@ -59,9 +59,11 @@
                     android:src="@drawable/ic_bottom_arrow" />
 
                 <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/leaveType"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint"
+                    android:spinnerMode="dropdown"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
@@ -73,6 +75,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/leaveBal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -83,7 +86,7 @@
             android:layout_marginRight="24dp"
             android:gravity="end"
             android:textColor="@color/text_color_green"
-            android:textSize="13sp" />
+            android:textSize="12sp" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -113,14 +116,14 @@
                     android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint2"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
+
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
@@ -159,27 +162,27 @@
                     android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/startDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint3"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
+                    android:focusable="false"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="16dp"
-                    android:src="@drawable/ic_calendar_small" />
+                    android:src="@drawable/ic_calander_3" />
 
 
             </RelativeLayout>
@@ -191,6 +194,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
+            android:layout_marginBottom="24dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="5dp"
             app:cardElevation="2dp">
@@ -213,33 +217,34 @@
                     android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/endDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint4"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
+                    android:focusable="false"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="16dp"
-                    android:src="@drawable/ic_calendar_small" />
+                    android:src="@drawable/ic_calander_3" />
 
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
