--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,8 @@
     <color name="text_color_light2">#5C616F</color>
     <color name="text_color_light3">#995C616F</color>
     <color name="text_color_green">#008859</color>
+    <color name="text_color_red">#F26333</color>
+    <color name="text_color_yellow">#C38E08</color>
 
 
 
