--- a/app/src/main/res/layout/document_request.xml
+++ b/app/src/main/res/layout/document_request.xml
@@ -28,8 +28,8 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp"
             app:cardBackgroundColor="@color/white">
 
             <RelativeLayout
@@ -60,13 +60,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/view"
                     android:fontFamily="@font/medium500"
                     android:text="Request for"
-                    android:textColor="@color/text_light_shade"
-                    android:textSize="14sp" />
+                    android:textColor="@color/text_color_light2"
+                    android:textSize="12sp" />
 
                 <ImageView
                     android:layout_width="24dp"
@@ -77,6 +77,7 @@
                     android:src="@drawable/ic_bottom_arrow" />
 
                 <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinnerDocType"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint"
@@ -90,14 +91,15 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/dateCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -113,31 +115,31 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/medium500"
                     android:text="Date Required By"
-                    android:textColor="@color/text_light_shade"
-                    android:textSize="14sp" />
+                    android:textColor="@color/text_color_light2"
+                    android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint3"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
+                    android:focusable="false"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="16dp"
-                    android:src="@drawable/ic_calendar_small" />
+                    android:src="@drawable/ic_calander_3" />
 
 
             </RelativeLayout>
@@ -150,8 +152,8 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -167,18 +169,17 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/medium500"
                     android:text="Email Address"
-                    android:textColor="@color/text_light_shade"
-                    android:textSize="14sp" />
+                    android:textColor="@color/text_color_light2"
+                    android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint6"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
@@ -196,8 +197,8 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -213,18 +214,17 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/medium500"
                     android:text="Description"
-                    android:textColor="@color/text_light_shade"
-                    android:textSize="14sp" />
+                    android:textColor="@color/text_color_light2"
+                    android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint2"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
@@ -236,6 +236,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/attachCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -243,8 +244,8 @@
             android:layout_marginRight="24dp"
             android:layout_marginBottom="24dp"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -260,20 +261,20 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/medium500"
                     android:text="Attach a File (Optional)"
-                    android:textColor="@color/text_light_shade"
-                    android:textSize="14sp" />
+                    android:textColor="@color/text_color_light2"
+                    android:textSize="12sp" />
 
                 <EditText
+                    android:id="@+id/attachment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hint5"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edittext_background"
+                    android:focusable="false"
                     android:fontFamily="@font/normal400"
                     android:minHeight="55dp"
                     android:paddingLeft="16dp" />
