--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -32,11 +32,11 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLay"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginTop="16dp"
         app:tabMode="auto"
-        app:tabGravity="fill"
-        app:tabIndicator="@color/white"
+        app:tabBackground="@drawable/indicator_selector"
+        app:tabIndicator="@android:color/transparent"
         android:background="@android:color/transparent"
         app:tabTextAppearance="@style/MyCustomTabAppearance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/container_bg"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
