--- a/app/src/main/res/layout/leave_request_holder.xml
+++ b/app/src/main/res/layout/leave_request_holder.xml
@@ -84,11 +84,12 @@
 
     <TextView
         android:id="@+id/from_to"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="28 May 2001 - 30 May 2001"
@@ -96,23 +97,26 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/cal2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cal2"
         app:layout_constraintTop_toTopOf="@+id/cal2" />
 
     <TextView
         android:id="@+id/request_on"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Requested on 27 May 2001"
         android:textColor="@color/text_color_light3"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/from_to" />
 
