--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,7 +40,8 @@
 
     <color name="text_color_black">#040C22</color>
     <color name="text_color_grey">#5C616F</color>
-
+    <color name="grey">#373737</color>
+    <color name="app_color_primary_light">#148DC2</color>
 
 
 
